// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Always Show All 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Viser alle options også når valgt
  </label>
  <ds-suggestion>
    <data
      value="Sogndal"
      aria-label="Sogndal, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Sogndal
    </data>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      popovertarget=":ds:14"
      data-label="Viser alle options også når valgt"
      list=":ds:14"
      aria-label="Viser alle options også når valgt​​​​​"
      aria-autocomplete="list"
      aria-controls=":ds:14"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      id="<removed>"
      tabindex="-1"
      aria-multiselectable="false"
      aria-labelledby="<removed>"
      data-floating="bottom"
      style="<removed>"
    >
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Controlled Independent Label Value 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Velg person
  </label>
  <ds-suggestion>
    <data
      value="#004"
      aria-label="Lars, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Lars
    </data>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      popovertarget=":ds:8"
      data-label="Velg person"
      list=":ds:8"
      aria-label="Velg person​​​​​"
      aria-autocomplete="list"
      aria-controls=":ds:8"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      id="<removed>"
      tabindex="-1"
      aria-multiselectable="false"
      aria-labelledby="<removed>"
      data-floating="bottom"
      style="<removed>"
    >
      <u-option
        label="Lars"
        value="#004"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
        aria-hidden="false"
      >
        Lars
      </u-option>
      <u-option
        label="James"
        value="#007"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        James
      </u-option>
      <u-option
        label="Nina"
        value="#113"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Nina
      </u-option>
      <u-option
        label="Tove"
        value="#110"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Tove
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="<removed>"
>
<div style="<removed>">
  Valgt person:
  <pre style="<removed>">
    {"label":"Lars","value":"#004"}
  </pre>
</div>
<button
  data-variant="secondary"
  type="button"
>
  Sett Nina
</button>
`;

exports[`Controlled Multiple 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Velg destinasjoner
  </label>
  <ds-suggestion data-multiple>
    <data
      value="Sogndal"
      aria-label="Sogndal, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Sogndal
    </data>
    <data
      value="Stavanger"
      aria-label="Stavanger, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Stavanger
    </data>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      popovertarget=":ds:6"
      data-label="Velg destinasjoner"
      list=":ds:6"
      aria-label="Velg destinasjoner, Navigate left to find 2 selected​​​​​"
      aria-autocomplete="list"
      aria-controls=":ds:6"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      id="<removed>"
      hidden
      tabindex="-1"
      aria-multiselectable="true"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="<removed>"
>
<p
  data-variant="default"
  style="<removed>"
>
  Valgte reisemål: Sogndal, Stavanger
</p>
<button
  data-variant="primary"
  type="button"
>
  Sett reisemål til Sogndal, Stavanger
</button>
`;

exports[`Controlled Single 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Velg destinasjon
  </label>
  <ds-suggestion>
    <data
      value="Sogndal"
      aria-label="Sogndal, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Sogndal
    </data>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      popovertarget=":ds:4"
      data-label="Velg destinasjon"
      list=":ds:4"
      aria-label="Velg destinasjon​​​​​"
      aria-autocomplete="list"
      aria-controls=":ds:4"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      id="<removed>"
      hidden
      tabindex="-1"
      aria-multiselectable="false"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="<removed>"
>
<p
  data-variant="default"
  style="<removed>"
>
  Valgte reisemål: Sogndal
</p>
<button
  data-variant="primary"
  type="button"
>
  Sett reisemål til Sogndal
</button>
`;

exports[`Custom Filter Alt 1 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <ds-suggestion>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      popovertarget=":ds:10"
      data-label="Skriv inn et tall mellom 1-6"
      list=":ds:10"
      aria-label="Skriv inn et tall mellom 1-6​​​​​"
      aria-autocomplete="list"
      aria-controls=":ds:10"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      id="<removed>"
      tabindex="-1"
      aria-multiselectable="false"
      aria-labelledby="<removed>"
      data-floating="bottom"
      style="<removed>"
    >
      <u-option
        value="sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        value="oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        value="brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        value="stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        value="trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        value="bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        value="lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Custom Filter Alt 2 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <ds-suggestion>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      popovertarget=":ds:12"
      data-label="Skriv inn et tall mellom 1-6"
      list=":ds:12"
      aria-label="Skriv inn et tall mellom 1-6​​​​​"
      aria-autocomplete="list"
      aria-controls=":ds:12"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      id="<removed>"
      tabindex="-1"
      aria-multiselectable="false"
      aria-labelledby="<removed>"
      data-floating="bottom"
      style="<removed>"
    >
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Default Value 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Velg en destinasjon
  </label>
  <ds-suggestion>
    <data
      value="Sogndal"
      aria-label="Sogndal, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Sogndal
    </data>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      popovertarget=":ds:20"
      data-label="Velg en destinasjon"
      list=":ds:20"
      aria-label="Velg en destinasjon​​​​​"
      aria-autocomplete="list"
      aria-controls=":ds:20"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      id="<removed>"
      tabindex="-1"
      aria-multiselectable="false"
      aria-labelledby="<removed>"
      data-floating="bottom"
      style="<removed>"
    >
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Bergen
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Fetch External 1`] = `
<ds-field lang="en">
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Search for countries (in english)
  </label>
  <ds-suggestion>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      popovertarget=":ds:16"
      data-label="Search for countries (in english)"
      list=":ds:16"
      aria-label="Search for countries (in english)​​​​​"
      aria-autocomplete="list"
      aria-controls=":ds:16"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-plural="%d countries"
      data-sr-singular="%d country"
      popover="manual"
      role="listbox"
      id="<removed>"
      tabindex="-1"
      aria-multiselectable="false"
      aria-labelledby="<removed>"
      data-floating="bottom"
      style="<removed>"
    >
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`In Details 1`] = `
<details data-variant="default">
  <summary>
    Åpne details som har overflow: clip;
  </summary>
  <div>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Velg en destinasjon
      </label>
      <ds-suggestion autofocus>
        <input
          placeholder=" "
          type="text"
          id="<removed>"
          popovertarget=":ds:22"
          data-label
          list=":ds:22"
          aria-label="​​​​​"
          aria-autocomplete="list"
          aria-controls=":ds:22"
          aria-expanded="true"
          autocomplete="off"
          role="combobox"
        >
        <del
          aria-label="Tøm"
          hidden
          role="button"
        >
        </del>
        <u-datalist
          data-nofilter
          data-sr-plural="%d forslag"
          data-sr-singular="%d forslag"
          popover="manual"
          role="listbox"
          id="<removed>"
          hidden
          tabindex="-1"
          aria-multiselectable="false"
        >
          <u-option
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Sogndal
          </u-option>
          <u-option
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Oslo
          </u-option>
          <u-option
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Brønnøysund
          </u-option>
          <u-option
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Stavanger
          </u-option>
          <u-option
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Trondheim
          </u-option>
          <u-option
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Bergen
          </u-option>
          <u-option
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Lillestrøm
          </u-option>
        </u-datalist>
      </ds-suggestion>
    </ds-field>
  </div>
</details>
`;

exports[`Multiple 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Velg en destinasjon
  </label>
  <ds-suggestion data-multiple>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      popovertarget=":ds:18"
      data-label="Velg en destinasjon"
      list=":ds:18"
      aria-label="Velg en destinasjon, No selected​​​​​"
      aria-autocomplete="list"
      aria-controls=":ds:18"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
      form="#"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      id="<removed>"
      tabindex="-1"
      aria-multiselectable="true"
      aria-labelledby="<removed>"
      data-floating="bottom"
      style="<removed>"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Velg en destinasjon
  </label>
  <ds-suggestion>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      popovertarget=":ds:2"
      data-label="Velg en destinasjon"
      list=":ds:2"
      aria-label="Velg en destinasjon​​​​​"
      aria-autocomplete="list"
      aria-controls=":ds:2"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      id="<removed>"
      tabindex="-1"
      aria-multiselectable="false"
      aria-labelledby="<removed>"
      data-floating="bottom"
      style="<removed>"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;
